# torchbraid

./: .gitignore  .gitmodules  Copyright.txt  LICENSE.md  MAKEINSTRUCTIONS.md  MANIFEST.in  Makefile  README.md  installation_torchbraid_parallel_env3.txt  makefile.inc  makefile.inc.example  pyproject.toml  sample.py  setup.cfg  setup.py  step_0_l_0.txt  step_0_l_1.txt  step_1_l_0.txt  step_1_l_1.txt  step_tf0_l_0.txt  step_tf1_0.txt  test.py  torchbraid.pyx  torchbraid_callbacks.pyx  tox.ini
drivers/: Makefile
env/: py37.yaml  py38.yaml
python/: Makefile  RNN_MNIST.py  braid.pyx  forward_scaling.py  sample.py  setup.py  test.py  test_bwd.py  torchbraid.py  torchbraid.pyx  torchbraid_app.pyx  torchbraid_apps.py  torchbraid_callbacks.pyx  torchbraid_function.py  torchbraid_test.pyx
scripts/: parse_and_plot_data.py  plotExtendedTimings.py  run_scalene.sh  update_copyright.sh  xbraid-norm.patch
tb_rnn/: Makefile  README.md  makefile.inc.example
tests/: Makefile  setup.py  step_tf0_l_0.txt  step_tf0_l_1.txt  step_tf1_0.txt  step_tf1_1.txt  test.py  test_ContextTimer.py  test_FlatPackUnpack.py  test_bwd.py  test_callbacks.py  test_cbs.pyx  test_composite.py  test_data_parallel.py  test_gpu_direct_commu.py  test_grad_update.py  test_gru_layer_parallel.py  test_gru_layer_parallel_new.py  test_layer_parallel.py  test_layer_parallel_gpu.py  test_layer_parallel_multinode.py  test_mean_initial_guess.py  test_mpi.py  test_network_parallel.py  test_rnn_layer_parallel.py  test_rnn_layer_parallel_synthetic.py  time_FlatPackUnpack.py  torchbraid_test.pyx
torchbraid/: Makefile  (+21 more)
(+535 files in other folders)
