[metadata]
name = torchbraid
version = 0.1
author = Eric C. Cyr
author_email = eccyr@sandia.gov
description = Layer parallel training of dep neural networks
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = True
include_package_data = True
