[metadata]
name = torchbraid
version = 0.1
author = Eric C. Cyr
author_email = eccyr@sandia.gov
description = Layer parallel training of dep neural networks
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
python_requires = >=3.7
package_dir = =src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
